常用语法回顾

--- a/stylus-guide/index.html
+++ b/stylus-guide/index.html
@@ -10,6 +10,19 @@
 
 <body>
   <div class="box"></div>
+  <div class="box2">
+    <ul>
+      <li><a href="www.baidu.com">百度一下</a></li>
+    </ul>
+  </div>
+  <!-- 函数 -->
+  <div class="fn-box1"></div>
+  <br />
+  <div class="fn-box2"></div>
+  <br />
+  <div class="fn-box3"></div>
+  <br />
+  <div class="fn-box4"></div>
 </body>
 
 </html>
