--- a/electron-demo/index.html
+++ b/electron-demo/index.html
@@ -8,11 +8,13 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <!-- <h1>Hello World!</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-    We are using Node.js <span id="render-node"></span>
+    and Electron <span id="electron-version"></span>. -->
+    We are using Node.js <span id="render-node"></span>.
+    <button id="send">Send to Main</button>
+    <p>接收主进程回复消息：<span id="reply-message"></span></p>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
